@@ -1,0 +1,9 @@
+#
+#  Config file for Cogent KIT637_V6 (CSB637) - AT91RM9200 SBC
+#  As a KIT637, the package includes a number of peripherals
+#  not normally on a CSB637.
+#
+#  $Id$
+#
+
+include $(RTEMS_ROOT)/make/custom/csb337.cfg
